--- a/Ajay_Mehra_1/LaTex_templates/IEEE_template/research_paper.tex
+++ b/Ajay_Mehra_1/LaTex_templates/IEEE_template/research_paper.tex
@@ -37,7 +37,7 @@ ajaymehra@duck.com}
 \thispagestyle{plain}
 \pagestyle{plain}
 \begin{abstract}
-The aim of this research paper is to develop a pattern recognition algorithm for predicting
+The aim of this research was to develop a pattern recognition algorithm for predicting
 simple image patterns using actual simulated data from Experimental Hall C at Jefferson Lab. 
 Using Keras library, a Convolution Neural Network(CNN) model in Python was designed with certain hidden layers like Colvolution, Maxpooling and Activation Layer, and each layer is aimed to extract different features from the images.
 While training it against 186 images of simulation data, the model worked very efficiently and reached an accuracy of ~100\% with a loss of 0.38. The models' predictive power was then tested with a 60 images, in which it achieved ~80 \% accuracy.\\
