--- a/Zain_Mothupi_3/Paper/IEEE_template/research_paper.tex
+++ b/Zain_Mothupi_3/Paper/IEEE_template/research_paper.tex
@@ -114,7 +114,7 @@ A simple illustration of a neural network architecture is shown in Fig.\ref{fig:
 
 \section{Methodology}
 In this research, we analyze a total of 186 distinct simulated optics patterns from the Super High Momentum Spectrometer (SHMS) at Hall C of Jefferson Lab.
-There were six different optics correlations ( $x_{fp}$ vs. $y_{fp}$,  $x_{pfp}$ vs. $y_{pfp}$, $x_{fp}$ vs. $y_{pfp}$,  $x_{pfp}$ vs. $y_{fp}$, $x_{fp}$ vs. $x_{pfp}$ and  $y_{pfp}$ vs. $y_{fp}$ . Here the first "fp" refers to the focal plane, which is an imaginary plane in the spectrometer where the transported particles are focused to and the first "p" refers to the prime symbol which is a derivative of the focal plane variable with respect to the opotical z-axis along which particles are transported. Each pattern had 31 optics images with varying optics tunes [Q1, Q2, Q3], corresponding to the spectrometer quadrupole magnets, summarized in Table \ref{tab:tune_stpSize}:
+There were six different optics correlations ( $x_{fp}$ vs. $y_{fp}$,  $x_{pfp}$ vs. $y_{pfp}$, $x_{fp}$ vs. $y_{pfp}$,  $x_{pfp}$ vs. $y_{fp}$, $x_{fp}$ vs. $x_{pfp}$ and  $y_{pfp}$ vs. $y_{fp}$ . Here the $``fp"$ refers to the focal plane, which is an imaginary plane in the spectrometer where the transported particles are focused to and the first $``p"$ refers to the prime symbol which is a derivative of the focal plane variable with respect to the optical z-axis along which particles are transported. Each pattern had 31 optics images with varying optics tunes [Q1, Q2, Q3], corresponding to the spectrometer quadrupole magnets, summarized in Table \ref{tab:tune_stpSize}:
 
 \begin{table}[ht!]
 	\begin{center}
@@ -136,7 +136,7 @@ Each of the six 2D SHMS optics pattern correlations were trained separately, usi
 per correlation plot for a total of 186 images. The optics patterns for testing the network consisted of only
 varying Q2 from 0.945 to 1.055 in steps of 0.01, while keeping Q1 and Q3 tunes fixed at unity.
 To test the neural network after it had been trained, a set of 10 images were used for each 2D optics correlation, where Q1 and Q3
-tunes were kept fixed at unity while Q2 was varied from 0.955 to 1.055 in steps of 0.01 for a total of 10 Q2 tunes.\\ Figure. \ref{fig:2d_correlation2} shows an example of a 2D Optics Correlation Plot.
+tunes were kept fixed at unity while Q2 was varied from 0.955 to 1.055 in steps of 0.01 for a total of 10 Q2 tunes.\\ Figure \ref{fig:2d_correlation2} shows an example of a 2D Optics Correlation Plot.
 
 
 
@@ -155,7 +155,7 @@ The data with specific [Q1,Q2,Q3] tunes were simulated using the standard Hall C
 and the raw data output was written to a ROOTfile. A separate ROOT C++ script (\texttt{make\_2Doptics.C}) was used to form each of
 the six abovementioned 2D focal plane correlations correlations which were stored in a separate ROOTfile as histogram objects.
 The 2D histograms were then converted to a 2D pixelated array and stored in binary format (.h5) via a Python code (\texttt{save2binary.py})
-array to be read by the Neural Network using Python Keras. Each optics image used was 200x200 pixels and was passed thorugh each of
+array to be read by the Neural Network using Python Keras. Each optics image used was 200x200 pixels and was passed through each of
 the hidden layers of the network described in Section III of this article.
 
 
@@ -180,7 +180,7 @@ the hidden layers of the network described in Section III of this article.
 \subsection{Convolutional Layer}
 The convolutional layer contains a set of 12 filters with dimension 6x6,  which are convolved with the input image and outputted by the layer. The process of convolving the image with the filters consists of overlaying the filter over a group of pixels (with the same dimensions as the filter), carrying out element-wise multiplication, calculating the sum of the results and using this as a pixel value in the output image. We then move on to the next possible grouping of pixels and continue the process until the entire image has been convolved with the filter. Convolutional layers help detect specific localized features in images which aids the model in making more accurate predictions (see Ref.\cite{CNNPart1_VZ_2019}).
 \subsection{Pooling Layer}
-We used a pooling size of 6 which decreaseS the size of  our input images from 200x200 to 32x32 pixels. This allows for the model to reduces the number of computations it has to perform while still preserving the important elements of the image. This is achieved by “pooling” or grouping pixel values together and selecting the maximum of the values which acts as a summary of the features present in the region (see Ref.\cite{CNNPart1_VZ_2019}).
+We used a pooling size of 6 which decreases the size of  our input images from 200x200 to 32x32 pixels. This allows for the model to reduces the number of computations it has to perform while still preserving the important elements of the image. This is achieved by “pooling” or grouping pixel values together and selecting the maximum of the values which acts as a summary of the features present in the region (see Ref.\cite{CNNPart1_VZ_2019}).
 \subsection{Activation Layer}
 The activation layer uses a function known as an activation function to transform an unbounded input to a bounded output. In this research we used the Softmax function as our activation function. The Softmax function is given by $\text{Softmax}(x_{i}) = \frac{\exp(x_i)}{\sum_j \exp(x_j)}$ and turns the neural network's output values into probabilities which are more useful when evaluating our models predictions as it allows us to assess the certainty with which the NN makes a prediction. We assess the performance of our NN using a loss function. The loss function compares the prediction of the NN to the actual value and calculates how far off the model is. This is then feed back to NN so that it can adjust its weights and biases to achieve a lower loss or higher accuracy (See Ref. \cite{Softmax}).
 
@@ -234,7 +234,7 @@ The results of the test images is summarized in Table  \ref{tab:results} where $
 
 
 
-These results show that the computer can achieve a reasonably high accuracy and low loss during training. The test data shows us that when given new data the model still outputs reliable predictions for the majority of optics correlations. However, from these results we can see that the model had trouble predicting the correct labels for the $x_{pfp}$ vs. $y_{fp}$ and  $y_{pfp}$ vs. $y_{fp}$  optics correlations. To improve the predictions we could decrease the step size between the optics tunes so that the neural network can learn to distinguish more subtle features in the data which will allow it to make more accurate predictions. Altogeher we have demonstrated that the model can recognize these optics patterns fairly well and with a few adjustments could be used to support humans in greatly reducing the time taken to classify these optics tune patterns.
+These results show that the computer can achieve a reasonably high accuracy and low loss during training. The test data shows us that when given new data the model still outputs reliable predictions for the majority of optics correlations. However, from these results we can see that the model had trouble predicting the correct labels for the $x_{pfp}$ vs. $y_{fp}$ and  $y_{pfp}$ vs. $y_{fp}$  optics correlations. To improve the predictions we could decrease the step size between the optics tunes so that the neural network can learn to distinguish more subtle features in the data which will allow it to make more accurate predictions. Altogether we have demonstrated that the model can recognize these optics patterns fairly well and with a few adjustments could be used to support humans in greatly reducing the time taken to classify these optics tune patterns.
 
 
 
